# syno_backup

./: .gitignore  README.adoc  pyproject.toml
config/: sample_mirror.json  sample_versioned.json  sample_versioned_ssh.json
data/sample_configs/: sample_versioned.json
scripts/: backup.py
src/: backup.py  rules.py
syno_backup/: rules.py
test/: test_rules.py
tests/: test_rules.py
