# Choosing a build backend:
[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.

[project]
name = "syno_backup"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.0"  # REQUIRED, although can be dynamic
description = "A Python project"
readme = "README.adoc"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["unittest"]

[project.scripts]
backup = "sample:main"